# lastfm-loved-sync

./: .editorconfig  .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/lastfm_loved_sync/: __init__.py  analysis.py  api_apply.py  bookmarks.py  browser.py  cli.py  config.py  lastfm_api.py  models.py  normalize.py  playlists.py  session.py  sync.py  tui.py  web_playlists.py
src/lastfm_loved_sync/api/: __init__.py  errors.py  read.py  resilience.py  sign.py  write.py
tests/: conftest.py
tests/e2e/: test_api_e2e.py  test_playlists_e2e.py  test_sync_e2e.py  test_web_playlists_e2e.py
tests/fixtures/: loved_tracks.json  top_albums.json  top_artists.json  top_tracks.json  track_page.html
tests/unit/: test_analysis.py  test_bookmarks.py  test_cli.py  test_lastfm_api.py  test_normalize.py  test_playlists.py  test_sync.py  test_tui.py  test_write_client.py
