[project]
name = "lastfm-loved-sync"
version = "0.1.0"
description = "Love your most-played Last.fm tracks and unlove the under-played ones, by scrobble threshold."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "fabricioguidine" }]
dependencies = [
    "httpx>=0.27",
    "tenacity>=8.5",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "playwright>=1.45",
    "typer>=0.12",
    "rich>=13.7",
    "questionary>=2.0",
]

[project.scripts]
lastfm-loved-sync = "lastfm_loved_sync.cli:app"

[project.urls]
Repository = "https://github.com/fabricioguidine/lastfm-loved-sync"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
    "respx>=0.21",
    "coverage[toml]>=7.5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lastfm_loved_sync"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer uses function calls (typer.Option/Argument) in argument defaults by design.
"src/lastfm_loved_sync/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["questionary.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests that drive a real browser (deselect with -m 'not e2e')"]

[tool.coverage.run]
source = ["lastfm_loved_sync"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
